force-app/main/default/objects/Product__c/fields/CID_number__c.field-meta.xml
<CustomField>
    <fullName>CID_number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CID number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>