force-app/main/default/objects/Product__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>The primary account holder&apos;s address city</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The primary account holder&apos;s address city</inlineHelpText>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>