force-app/main/default/objects/Product__c/fields/Co_Borrower__c.field-meta.xml
<CustomField>
    <fullName>Co_Borrower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-Borrower</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Customer Salesforce, Updated From SOR</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Products (Co-Borrower)</relationshipLabel>
    <relationshipName>Products3</relationshipName>
    <type>Lookup</type>
</CustomField>