force-app/main/default/objects/Product__c/fields/Co_Borrower_AKA_Name__c.field-meta.xml
<CustomField>
    <fullName>Co_Borrower_AKA_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Co-Borrower AKA Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>