force-app/main/default/objects/Product__c/fields/Co_Borrower_Employer_City__c.field-meta.xml
<CustomField>
    <fullName>Co_Borrower_Employer_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Co-Borrower Employer City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>