force-app/main/default/objects/Product__c/fields/Co_Borrower_Employer_Country__c.field-meta.xml
<CustomField>
    <fullName>Co_Borrower_Employer_Country__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Co-Borrower Employer Country</label>
    <length>20</length>
    <type>Text</type>
</CustomField>