force-app/main/default/objects/Product__c/fields/Co_Borrower_Employer_Name__c.field-meta.xml
<CustomField>
    <fullName>Co_Borrower_Employer_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Co-Borrower Employer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>