force-app/main/default/objects/Product__c/fields/Co_Borrower_Employer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Co_Borrower_Employer_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Co-Borrower Employer Phone</label>
    <type>Phone</type>
</CustomField>