force-app/main/default/objects/Product__c/fields/Co_Borrower_Employer_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Co_Borrower_Employer_Postal_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Co-Borrower Employer Postal Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>