force-app/main/default/objects/Product__c/fields/Co_Borrower_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Co_Borrower_First_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Co-Borrower First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>