force-app/main/default/objects/Product__c/fields/Co_Borrower_Province_Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>Co_Borrower_Province_Abbreviation__c</fullName>
    <formula>CASE( Codebtor_State__c ,
&quot;Alberta&quot;, &quot;AB&quot;,
&quot;British Columbia&quot;, &quot;BC&quot;,
&quot;Manitoba&quot;, &quot;MB&quot;,
&quot;New Brunswick&quot;, &quot;NB&quot;,
&quot;Newfoundland and Labrador&quot;, &quot;NL&quot;,
&quot;Northwest Territories&quot;, &quot;NT&quot;,
&quot;Nova Scotia&quot;, &quot;NS&quot;,
&quot;Nunavut&quot;, &quot;NU&quot;,
&quot;Ontario&quot;, &quot;ON&quot;,
&quot;Prince Edward Island&quot;, &quot;PE&quot;,
&quot;Quebec&quot;, &quot;QC&quot;,
&quot;Saskatchewan&quot;, &quot;SK&quot;,
&quot;Yukon&quot;, &quot;YT&quot;,
Codebtor_State__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Co-Borrower Province Abbreviation</label>
    <type>Text</type>
</CustomField>