force-app/main/default/objects/Product__c/fields/Co_Borrower_Status__c.field-meta.xml
<CustomField>
    <fullName>Co_Borrower_Status__c</fullName>
    <label>Co-Borrower Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bankrupt Account</fullName>
            </value>
            <value>
                <fullName>Cease and Desist – In Writing</fullName>
            </value>
            <value>
                <fullName>Consumer Proposal</fullName>
            </value>
            <value>
                <fullName>Credit Counselling</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Exhausted</fullName>
            </value>
            <value>
                <fullName>Fraud Claimed</fullName>
            </value>
            <value>
                <fullName>Incarcerated</fullName>
            </value>
            <value>
                <fullName>Language Barrier</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Moved Out of Province</fullName>
            </value>
            <value>
                <fullName>Paid in Full Account</fullName>
            </value>
            <value>
                <fullName>Payment Arrangement - Monthly</fullName>
            </value>
            <value>
                <fullName>Payment Arrangement – Weekly</fullName>
            </value>
            <value>
                <fullName>Prepped for Legal</fullName>
            </value>
            <value>
                <fullName>Previously Paid with Agency</fullName>
            </value>
            <value>
                <fullName>Previously Paid with Vendor</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
            <value>
                <fullName>Refuse to Pay</fullName>
            </value>
            <value>
                <fullName>Settled in Full Account</fullName>
            </value>
            <value>
                <fullName>Skip Trace - Completed</fullName>
            </value>
            <value>
                <fullName>Skip Trace - Required</fullName>
            </value>
            <value>
                <fullName>Sourcing for Funds</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>