force-app/main/default/objects/Product__c/fields/Codebtor_Address_Line2__c.field-meta.xml
<CustomField>
    <fullName>Codebtor_Address_Line2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Debtor Address Line 2</label>
    <length>200</length>
    <type>Text</type>
</CustomField>