force-app/main/default/objects/Product__c/fields/Codebtor_Alias_Name__c.field-meta.xml
<CustomField>
    <fullName>Codebtor_Alias_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Alias Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>