force-app/main/default/objects/Product__c/fields/Codebtor_City__c.field-meta.xml
<CustomField>
    <fullName>Codebtor_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Debtor City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>