force-app/main/default/objects/Product__c/fields/Codebtor_Country__c.field-meta.xml
<CustomField>
    <fullName>Codebtor_Country__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Debtor Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>