force-app/main/default/objects/Product__c/fields/Codebtor_Customer_Language__c.field-meta.xml
<CustomField>
    <fullName>Codebtor_Customer_Language__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Language</label>
    <length>30</length>
    <type>Text</type>
</CustomField>