force-app/main/default/objects/Product__c/fields/Codebtor_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Codebtor_Date_of_Birth__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Debtor Date of Birth</label>
    <type>Date</type>
</CustomField>