force-app/main/default/objects/Product__c/fields/Codebtor_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Codebtor_Email_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Debtor Email Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>