force-app/main/default/objects/Product__c/fields/Codebtor_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Codebtor_First_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Debtor First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>