force-app/main/default/objects/Product__c/fields/Codebtor_Home_Phone_Format__c.field-meta.xml
<CustomField>
    <fullName>Codebtor_Home_Phone_Format__c</fullName>
    <formula>IF(ISBLANK( Codebtor_Phone_Home__c ), &quot;&quot;, IF(LEN(Codebtor_Phone_Home__c ) = 10, &quot;(&quot; + LEFT( Codebtor_Phone_Home__c, 3) + &quot;) &quot; + MID(Codebtor_Phone_Home__c, 4, 3) + &quot;-&quot; + MID(Codebtor_Phone_Home__c , 7, 4), Codebtor_Phone_Home__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Debtor Home Phone Format</label>
    <type>Text</type>
</CustomField>