force-app/main/default/objects/Product__c/fields/Codebtor_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Codebtor_Last_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Debtor Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>