force-app/main/default/objects/Product__c/fields/Codebtor_Phone_Home__c.field-meta.xml
<CustomField>
    <fullName>Codebtor_Phone_Home__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Debtor Home Phone</label>
    <type>Phone</type>
</CustomField>