force-app/main/default/objects/Product__c/fields/Codebtor_Phone_Other__c.field-meta.xml
<CustomField>
    <fullName>Codebtor_Phone_Other__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Debtor Cell Phone</label>
    <type>Phone</type>
</CustomField>