force-app/main/default/objects/Product__c/fields/Codebtor_Phone_Work__c.field-meta.xml
<CustomField>
    <fullName>Codebtor_Phone_Work__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Debtor Work Phone</label>
    <type>Phone</type>
</CustomField>