force-app/main/default/objects/Product__c/fields/Codebtor_SIN__c.field-meta.xml
<CustomField>
    <fullName>Codebtor_SIN__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Secondary Debtor SIN</label>
    <length>9</length>
    <type>Text</type>
</CustomField>