force-app/main/default/objects/Product__c/fields/Codebtor_State__c.field-meta.xml
<CustomField>
    <fullName>Codebtor_State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Debtor Province</label>
    <length>50</length>
    <type>Text</type>
</CustomField>