force-app/main/default/objects/Product__c/fields/Codebtor_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Codebtor_Zip_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Debtor Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>