force-app/main/default/objects/Product__c/fields/Collection_Agency__c.field-meta.xml
<CustomField>
    <fullName>Collection_Agency__c</fullName>
    <label>Agency ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>