force-app/main/default/objects/Product__c/fields/Collection_Agency_Formula__c.field-meta.xml
<CustomField>
    <fullName>Collection_Agency_Formula__c</fullName>
    <formula>Collection_Agency_Placement__r.Agency_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Display Agency Name
This field is used for Distressed Accounts Only</inlineHelpText>
    <label>Agency Name</label>
    <type>Text</type>
</CustomField>