force-app/main/default/objects/Product__c/fields/Collection_Agency_Placement__c.field-meta.xml
<CustomField>
    <fullName>Collection_Agency_Placement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup against Placement</description>
    <inlineHelpText>Lookup against Placement</inlineHelpText>
    <label>Agency ID - NOT AUTHORITATIVE</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>