force-app/main/default/objects/Product__c/fields/Collection_Movement_Status__c.field-meta.xml
<CustomField>
    <fullName>Collection_Movement_Status__c</fullName>
    <description>To identify the records if they are moved in or out of collection.</description>
    <inlineHelpText>To identify the records if they are moved in or out of collection.</inlineHelpText>
    <label>Collection Movement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Moved out of Collection</fullName>
            </value>
            <value>
                <fullName>Returned to Collection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>