force-app/main/default/objects/Product__c/fields/Collection_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Collection_Sub_Status__c</fullName>
    <description>A status for this account indicating customer&apos;s relevant circumstances for collection (deceased, bankrupt, etc)</description>
    <inlineHelpText>A status for this account indicating customer&apos;s relevant circumstances for collection (deceased, bankrupt, etc)</inlineHelpText>
    <label>Collection Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bankrupt Account</fullName>
            </value>
            <value>
                <fullName>Cease and Desist – In Writing</fullName>
            </value>
            <value>
                <fullName>Consumer Proposal</fullName>
            </value>
            <value>
                <fullName>Credit Counselling</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Exhausted</fullName>
            </value>
            <value>
                <fullName>Fraud Claimed</fullName>
            </value>
            <value>
                <fullName>Incarcerate</fullName>
            </value>
            <value>
                <fullName>Language Barrier</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Moved out of Province.</fullName>
            </value>
            <value>
                <fullName>Paid in Full Account</fullName>
            </value>
            <value>
                <fullName>Payment Arrangement – Monthly</fullName>
            </value>
            <value>
                <fullName>Payment Arrangement – Weekly</fullName>
            </value>
            <value>
                <fullName>Prepped for Legal</fullName>
            </value>
            <value>
                <fullName>Previously Paid with Agency</fullName>
            </value>
            <value>
                <fullName>Previously Paid with Vendor</fullName>
            </value>
            <value>
                <fullName>Probate</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
            <value>
                <fullName>Refuse to Pay</fullName>
            </value>
            <value>
                <fullName>Settled In Full Account</fullName>
            </value>
            <value>
                <fullName>Skip Trace – Completed</fullName>
            </value>
            <value>
                <fullName>Skip Trace – Required</fullName>
            </value>
            <value>
                <fullName>Sourcing for Funds</fullName>
            </value>
            <value>
                <fullName>CET Offshore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>