force-app/main/default/objects/Product__c/fields/Collection_Sub_Status_last_changed__c.field-meta.xml
<CustomField>
    <fullName>Collection_Sub_Status_last_changed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Collection Sub Status last changed</label>
    <type>DateTime</type>
</CustomField>