force-app/main/default/objects/Product__c/fields/Commission_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Commission_Adjustment__c</fullName>
    <description>Commission Adjustment value which will be added or subtracted from the Commission Rate based on if it positive or negative value</description>
    <inlineHelpText>Commission Adjustment value which will be added or subtracted from the Commission Rate based on if it positive or negative value</inlineHelpText>
    <label>Commission Adjustment</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>