force-app/main/default/objects/Product__c/fields/Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Commission_Rate__c</fullName>
    <description>Current commission rate on distressed Product record</description>
    <inlineHelpText>Current commission rate on distressed Product record</inlineHelpText>
    <label>Current Commission Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>