force-app/main/default/objects/Product__c/fields/Commission_Rate_at_Time_of_Placement__c.field-meta.xml
<CustomField>
    <fullName>Commission_Rate_at_Time_of_Placement__c</fullName>
    <description>Commission Rate at Time of Placement</description>
    <inlineHelpText>Commission Rate at Time of Placement</inlineHelpText>
    <label>Placed Commission Rate (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>