force-app/main/default/objects/Product__c/fields/Compare_Late_fee_and_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Compare_Late_fee_and_Credit_Limit__c</fullName>
    <description>To use on the workflows for Delinquency Days 25</description>
    <formula>Current_Balance__c &gt; Credit_Limit__c</formula>
    <inlineHelpText>To use on the workflows for Delinquency Days 25</inlineHelpText>
    <label>Compare Late fee and Credit Limit</label>
    <type>Checkbox</type>
</CustomField>