force-app/main/default/objects/Product__c/fields/Consent_To_Repayment_Offer__c.field-meta.xml
<CustomField>
    <fullName>Consent_To_Repayment_Offer__c</fullName>
    <description>Consent to the repayment offer (Yes / No) - If No then reasons</description>
    <inlineHelpText>Consent to the repayment offer (Yes / No) - If No then reasons</inlineHelpText>
    <label>Consent To Repayment Offer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>