force-app/main/default/objects/Product__c/fields/Counter__c.field-meta.xml
<CustomField>
    <fullName>Counter__c</fullName>
    <inlineHelpText>Counter Amount</inlineHelpText>
    <label>Counter Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>