force-app/main/default/objects/Product__c/fields/Counter_Donation__c.field-meta.xml
<CustomField>
    <fullName>Counter_Donation__c</fullName>
    <inlineHelpText>Counter Donation %</inlineHelpText>
    <label>Counter Donation %</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>