force-app/main/default/objects/Product__c/fields/Credit_Counselling_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Counselling_Date__c</fullName>
    <description>Credit Counselling Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Credit Counselling Date</inlineHelpText>
    <label>Credit Counselling Date</label>
    <type>Date</type>
</CustomField>