force-app/main/default/objects/Product__c/fields/Credit_Limit_Last_Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Last_Changed_Date__c</fullName>
    <description>The last time the credit limit changed on this account</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The last time the credit limit changed on this account</inlineHelpText>
    <label>Credit Limit Last Changed Date</label>
    <type>Date</type>
</CustomField>