force-app/main/default/objects/Product__c/fields/Credit_Score_Primary_Debtor__c.field-meta.xml
<CustomField>
    <fullName>Credit_Score_Primary_Debtor__c</fullName>
    <description>Credit Score Primary Debtor is used for distressed collection</description>
    <inlineHelpText>Credit Score Primary Debtor is used for distressed collection</inlineHelpText>
    <label>Credit Score Primary Debtor</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>