force-app/main/default/objects/Product__c/fields/Cross_Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>Cross_Reference_ID__c</fullName>
    <description>Cross Reference ID</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Cross Reference ID</inlineHelpText>
    <label>Cross Reference ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>