force-app/main/default/objects/Product__c/fields/CTD_Unpaid__c.field-meta.xml
<CustomField>
    <fullName>CTD_Unpaid__c</fullName>
    <description>This is the unpaid amount from the last statement (i.e. cycle to date).</description>
    <inlineHelpText>This is the unpaid amount from the last statement (i.e. cycle to date).</inlineHelpText>
    <label>CTD Unpaid</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>