force-app/main/default/objects/Product__c/fields/Current_Bal_Attorney_Fees__c.field-meta.xml
<CustomField>
    <fullName>Current_Bal_Attorney_Fees__c</fullName>
    <label>Current Bal Attorney Fees</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>