force-app/main/default/objects/Product__c/fields/Current_Fees__c.field-meta.xml
<CustomField>
    <fullName>Current_Fees__c</fullName>
    <formula>Current_Bal_NSF_Fees__c + Fee_Recovery__c</formula>
    <label>Current Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>