force-app/main/default/objects/Product__c/fields/Current_Interest_Amount__c.field-meta.xml
<CustomField>
    <fullName>Current_Interest_Amount__c</fullName>
    <description>The total amount of interest accrued on this insolvency account to date</description>
    <inlineHelpText>The total amount of interest accrued on this insolvency account to date</inlineHelpText>
    <label>Current Interest Balance</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>