force-app/main/default/objects/Product__c/fields/Current_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Current_Interest_Rate__c</fullName>
    <inlineHelpText>Current Interest Rate</inlineHelpText>
    <label>Current Interest Rate</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>