force-app/main/default/objects/Product__c/fields/Current_Net_Face_Value__c.field-meta.xml
<CustomField>
    <fullName>Current_Net_Face_Value__c</fullName>
    <description>The net face value of this account to date</description>
    <inlineHelpText>The net face value of this account to date</inlineHelpText>
    <label>Current Net Face Value</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>