force-app/main/default/objects/Product__c/fields/Current_Payoff_Amount__c.field-meta.xml
<CustomField>
    <fullName>Current_Payoff_Amount__c</fullName>
    <description>The amount outstanding on this account (balance + fees + unpaid interest), as of the current balance effective date</description>
    <inlineHelpText>The amount outstanding on this account (balance + fees + unpaid interest), as of the current balance effective date</inlineHelpText>
    <label>Current Payoff Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>