force-app/main/default/objects/Product__c/fields/Current_Principal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Current_Principal_Amount__c</fullName>
    <description>The total current principal amount on this account to date</description>
    <inlineHelpText>The total current principal amount on this account to date</inlineHelpText>
    <label>Current Principal Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>