force-app/main/default/objects/Product__c/fields/Current_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Current_Workflow__c</fullName>
    <label>Current Workflow</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Collection Process</fullName>
            </value>
            <value>
                <fullName>Promise to Pay Flow</fullName>
            </value>
            <value>
                <fullName>Low Balance Flow</fullName>
            </value>
            <value>
                <fullName>Pre-Legal Flow</fullName>
            </value>
            <value>
                <fullName>Trace Flow</fullName>
            </value>
            <value>
                <fullName>Internal Collection</fullName>
            </value>
            <value>
                <fullName>ICT Promise to Pay</fullName>
            </value>
            <value>
                <fullName>ICT Pre Legal Flow</fullName>
            </value>
            <value>
                <fullName>ICT Trace Flow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>