force-app/main/default/objects/Product__c/fields/Customer_DO_NOT_SOLICIT__c.field-meta.xml
<CustomField>
    <fullName>Customer_DO_NOT_SOLICIT__c</fullName>
    <formula>Customer__r.PersonContact.DO_NOT_SOLICIT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer DO NOT SOLICIT</label>
    <type>Checkbox</type>
</CustomField>