force-app/main/default/objects/Product__c/fields/Customer_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Customer_Identifier__c</fullName>
    <formula>Customer__r.SF_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Identifier</label>
    <type>Text</type>
</CustomField>