force-app/main/default/objects/Product__c/fields/Customer_Language__c.field-meta.xml
<CustomField>
    <fullName>Customer_Language__c</fullName>
    <description>Preferred language of correspondence, based on the value set on the Customer record for the account holder.</description>
    <formula>TEXT(Customer__r.Language__pc)</formula>
    <inlineHelpText>Preferred language of correspondence, based on the value set on the Customer record for the account holder.</inlineHelpText>
    <label>Customer Language</label>
    <type>Text</type>
</CustomField>